2007-02-20  Abel Cheung  <abelcheung@gmail.com>

	* wp-scorerender.php: Add guido support.

2007-02-20  Abel Cheung  <abelcheung@gmail.com>

	* class.guido.inc.php: New file.

2007-02-17  Abel Cheung  <abelcheung@gmail.com>

	* wp-scorerender.php:
	Drop latex support. Now read and write configuration
	option as an array instead of 20+ independent values.
	Simpler(?) regex for tag matching.

	* class.*.php:
	Relevant variable changes.
	Copyright notices.

2007-02-16  Abel Cheung  <abelcheung@gmail.com>

	* class.*.inc.php: Rename parent class function name.
	* class.mup.inc.php, class.scorerender.inc.php:
	Don't set density anymore, tune staff size instead.

2007-02-16  Abel Cheung  <abelcheung@gmail.com>

	* class.mup.inc.php, class.lilypond.inc.php:
	Tune the staff size of mup and lilypond so they both
	output 16pt staves. Drop safe mode for lilypond,
	otherwise lilypond can't set staff size at all.

2007-02-15  Abel Cheung  <abelcheung@gmail.com>

	* class.*.php: Rename classes.

2007-02-15  Abel Cheung  <abelcheung@gmail.com>

	* class.mup.inc.php, class.scorerender.inc.php:
	Change density from 110 to 90.

2007-02-15  Abel Cheung  <abelcheung@gmail.com>

	* wp-scorerender.php: Turn on transparency and turn off
	"show input source" option by default.

2007-02-15  Abel Cheung  <abelcheung@gmail.com>

	* class.*.inc.php: Rename.
	* wp-figurerender.php: Rename, and include renamed files.

2007-02-10  Abel Cheung  <abelcheung@gmail.com>

	* class.*.inc.php:
	_exec() now just returns the exit status of previous command.
	Command output is already stored in object variable.

	* class.lilypondrender.inc.php:
	Drop implicit header added to music fragment that caused
	rendering error.

2007-02-10  Abel Cheung  <abelcheung@gmail.com>

	* class.muprender.inc.php:
	Also sets $HOME. Mup mandates it. Grrrrr.

	* class.figurerender.inc.php, class.muprender.inc.php:
	Use touch instead of opening and closing file.

	* wp-figurerender.php: