@@ -1,3 +1,7 @@
+2007-02-21  Abel Cheung  <abelcheung@gmail.com>
+
+	* wp-scorerender.php: Allows update of database structure.
+
 2007-02-20  Abel Cheung  <abelcheung@gmail.com>
 
 	* wp-scorerender.php: Add guido support.
